--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,29 @@
-{deps, [
-    {erlsom, ".*", {git, "https://github.com/willemdj/erlsom.git"}}
+{erl_opts, [
+    debug_info,
+    warn_unused_vars,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    strict_validation,
+    warn_export_vars,
+    warn_exported_vars,
+    warn_untyped_record
 ]}.
+
+{deps, [
+    {erlsom,           "1.4.1"},
+    {eunit_formatters, "0.5.0"}
+]}.
+
+{cover_enabled, true}.
+{cover_print_enabled, true}.
+{eunit_opts, [verbose,
+              no_tty,
+              {report, {eunit_progress, [colored]}}]}.
+
+{xref_checks, [undefined_function_calls]}.
